# codex-account-manger

./: .gitignore  PRD.md  README.md  index.html  package-lock.json  package.json
.githooks/: pre-push
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/components/AccountDetail/: AccountDetail.tsx
src/components/AccountList/: AccountList.tsx
src/components/AddAccount/: AddAccountModal.tsx
src/components/common/: RingChart.tsx  Toast.tsx
src/store/: accountStore.ts
src/types/: index.ts
src/utils/: accountBackup.ts  auth.ts
