[package]
name = "app"
version = "0.1.0"
description = "Codex Manager - Manage multiple OpenAI Codex CLI accounts"
authors = ["Codex Manager"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"

# OAuth / HTTP
sha2 = "0.10"
base64ct = { version = "1.6", features = ["alloc"] }
rand = "0.8"
ureq = { version = "2.9", features = ["json"] }
urlencoding = "2.1"
